[gd_scene load_steps=19 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=3]
[ext_resource path="res://Boxes/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Boxes/HitBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.97304

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.88058
height = 6.58645

[sub_resource type="CircleShape2D" id=9]
radius = 49.0175

[sub_resource type="CapsuleShape2D" id=10]
radius = 5.5624
height = 1.60757

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 17
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "fly"
frame = 3
offset = Vector2( 0, -12 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.619608 )
shape = SubResource( 9 )

[node name="HitBox" parent="." instance=ExtResource( 7 )]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -11.0029 )
shape = SubResource( 10 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="WanderController" parent="." instance=ExtResource( 8 )]

[node name="StateSwitcher" type="Timer" parent="."]
autostart = true
[connection signal="area_entered" from="HurtBox" to="." method="_on_be_attacked"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_HitBox_area_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="StateSwitcher" to="." method="_on_StateSwitcher_timeout"]

[editable path="HurtBox"]

[editable path="PlayerDetectionZone"]

[editable path="HitBox"]
